client/src/components/Account/PendingReviews.css
.buyer-no-pending-reviews {
  min-height: 70vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.no-reviews-icon {
  font-size: 60px;
  color: #f76b1a;
}

.buyer-no-pending-reviews p {
  width: 80%;
  text-align: center;
}

.pending-review-shopping-btn,
.pending-review-shopping-btn:hover {
  background-color: #f76b1a;
  color: #fff;
  border: none;
}

.pending-review-shopping-btn:focus {
  border: none;
  outline: none;
}

.buyer-pending-reviews {
  padding: 20px;
}
.buyer-pending-review {
  border-left: 3px solid #f76b1a;
}

.buyer-pending-review div {
  display: flex;
  align-items: center;
}

.buyer-pending-review div img {
  height: 100px;
}

#buyer-review-product-name {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

/* #buyer-review-product-name div {
  min-width: 400px;
  /* background-color: red; */

#buyer-review-product-name h6 {
  width: 400px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.rate-link-wrapper a,
.rate-link-wrapper a:hover {
  color: #f76b1a;
  text-decoration: none;
}

.pending-review-rate-link:hover {
  padding: 3px 5px;
  background-color: rgba(255, 192, 203, 0.5);
  border-radius: 5px;
}

@media screen and (max-width: 1140px) {
  #buyer-review-product-name h6 {
    /* width: 5; */
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

@media screen and (max-width: 960px) {
  .pending-reviews-wrapper {
    margin-bottom: 65px;
  }

  .rate-link-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    border-top: 1px solid #d4d4d4;
    padding: 5px 0px;
  }
}

@media screen and (max-width: 770px) {
  #buyer-review-product-name h6 {
    width: 300px;
  }
}

@media screen and (max-width: 540px) {
  #buyer-review-product-name h6 {
    width: 200px;
  }
}

@media screen and (max-width: 359px) {
  #buyer-review-product-name h6 {
    width: 130px;
  }
}

